<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.AddExpenseActivity">

    <TextView
        android:id="@+id/date_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/date_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/expense_type_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expense_type_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/expense_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:entries="@array/expense_type_array" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/expense_miscellaneous_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/expense_miscellaneous_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/miscellaneous_label"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="10" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/expense_price_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/expense_price_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_label"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal|numberSigned"
            android:maxLength="10" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/expense_comment_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/expense_comment_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comments_label"
            android:imeOptions="actionDone"
            android:inputType="textAutoComplete"
            android:maxLength="10" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>
